# 2026S-HC

./: pyproject.toml
hc02/: __init__.py  cli.py  compute.py  device.py  memory.py  plotting.py  reporting.py  timing.py
hc02/results/20260708-090120/: compute.csv  device.json  memory.csv
