[project]
name = "hc02"
version = "0.1.0"
description = "Benchmarks for Heterogeneous Computing exercise sheet 2."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib>=3.8",
    "numba>=0.61,<0.66",
    "numba-cuda[cu13]>=0.30.3",
    "numpy>=2.0",
    "pandas>=2.2",
]

[project.scripts]
hc02 = "hc02.cli:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["hc02"]